tests/baselines/reference/moduleResolutionWithSuffixes_empty.errors.txt
/tsconfig.json(3,23): error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== /tsconfig.json (1 errors) ====
    {
    	"compilerOptions": {
    		"moduleResolution": "node",
    		                    ~~~~~~
!!! error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107:   Visit https://aka.ms/ts6 for migration information.
    		"traceResolution": true,
    		"moduleSuffixes": []
    	}
    }
==== /index.ts (0 errors) ====
    import { base } from "./foo";
==== /foo.ts (0 errors) ====
    export function base() {}
    